<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>The SCV localization package</description>

  <maintainer email="junhq1234@cu.ac.kr">junhq1234@cu.ac.kr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hdl_localization</exec_depend>
  <exec_depend>hdl_global_localization</exec_depend>
  <exec_depend>ndt_omp</exec_depend>
  <exec_depend>fast_gicp</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
